--- a/src/calendar.css
+++ b/src/calendar.css
@@ -24,16 +24,22 @@
     height: 100%;
 }
 
-.mantine-Calendar-day>.day-number {
+.mantine-Calendar-day .day-number-row {
     align-self: flex-start;
+    display: flex;
+    border-radius: 15%;
+    padding: 0.2rem;
+}
+
+.mantine-Calendar-day .day-number {
     width: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 15%;
     padding: 0.2rem;
-    background-color: #f3f3f3;
-    font-weight: 500;
+    background-color: #f5f5f5;
+    font-weight: 600;
     font-size: 1rem;
 }
 
@@ -44,8 +50,21 @@
 
 .mantine-Calendar-day:where([data-today]) {
     border-color: gold;
-    border-width: 3px;
+    border-width: 2px;
     border-style: solid;
+}
+
+.mantine-Calendar-day:where([data-today]) .day-number {
+    z-index: 1;
+}
+
+.mantine-Calendar-day:where([data-today]) .today-marker {
+    margin-left: -.5rem;
+    padding: 0.2rem 0.4rem;
+    padding-left: 1rem;
+    border-radius: 12%;
+    background-color: rgb(255, 236, 129);
+    font-weight: 500;
 }
 
 .mantine-Calendar-calendarHeaderLevel {
