--- a/src/calendar.css
+++ b/src/calendar.css
@@ -8,7 +8,7 @@
 }
 
 .mantine-Calendar-monthCell {
-    border: 5px solid #f0f0f0;
+    border: 1px solid #f0f0f0;
 }
 
 .mantine-Calendar-day {
@@ -44,18 +44,17 @@
 }
 
 .mantine-Calendar-day>.mantine-Card-root {
-    width: 108%;
+    width: 105%;
     margin-top: auto;
 }
 
 .mantine-Calendar-day:where([data-today]) {
-    border-color: gold;
-    border-width: 2px;
-    border-style: solid;
+    /* background-color: rgb(255, 250, 222); */
 }
 
 .mantine-Calendar-day:where([data-today]) .day-number {
     z-index: 1;
+    background-color: gold;
 }
 
 .mantine-Calendar-day:where([data-today]) .today-marker {
@@ -63,8 +62,9 @@
     padding: 0.2rem 0.4rem;
     padding-left: 1rem;
     border-radius: 12%;
-    background-color: rgb(255, 236, 129);
+    background-color: white;
     font-weight: 500;
+    border: 1px solid gold;
 }
 
 .mantine-Calendar-calendarHeaderLevel {
